--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "css-loader": "^0.28.7",
     "node-sass": "^4.6.1",
     "sass-loader": "^6.0.6",
-    "style-loader": "^0.19.0"
+    "style-loader": "^0.19.0",
+    "webpack": "^2.2.0"
   },
   "dependencies": {
     "jsonp": "^0.2.1"
